2021-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/ds390/gen.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/pic14/gen.c,
	  src/pic14/main.c,
	  src/pic14/ralloc.c,
	  src/pic16/gen.c,
	  src/pic16/main.c,
	  src/pic16/ralloc.c,
	  src/port.h,
	  src/z80/gen.c:
	  Remove infrastructure for obsolete GETHBIT.

2021-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/ds390/gen.c,
	  src/ds390/main.c:
	  Support GETABIT instead of GETHBIT.

2021-06-08 Visenri
	* src/SDCCpeeph.c:
	  Fixed buffer overflow in operand string in "immdInRange" function.
	  
2021-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Rotate support, inspired by patch #363 by Visenri.
	* src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/ralloc2.cc:
	  Remove redundant z80 GETHBIT support.

2021-06-07 Visenri
	* src/stm8/peeph.def:
	  Removed unused rules 660a & 660b because of patches applied in r12420 (SWAP implementation).
	* ChangeLog:
	  Fixed wrong date of previous commit.

2021-06-07 Visenri
	* src/stm8/peep.c,
	  Fixed typo regarding instruction 'jrsgt'.
	* src/stm8/peeph.def:
	  Added rules 600a & 600b from patch #362 that were failing because of the 'jrsgt' typo.

2021-06-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Swap support, inspired by patch #363 by Visenri.

2021-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2349.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/fptr_cast_array_init.c,
	  support/regression/tests/genptrs.c,
	  support/regression/tests/z80n-push-nn.c:
	  Disable tests that fail due to known bug #3243.
	* src/stm8/peeph.def:
	  Rule packs 1, 3, 5, 6 from patch #362 by Visenri.
	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/valdiag/tests/bug-2798.c:
	  Fix bug #2798.

2021-05-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def: